--- a/Modelling_Sarimax.ipynb
+++ b/Modelling_Sarimax.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modelling Part I"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 260,
    "metadata": {},
